@@ -2,10 +2,11 @@
 # See LICENSE for details.
 
 """
-The adapter package provides additional functionality for other python
+The adapter package provides additional functionality for other Python
 packages. This includes registering classes, setting up type maps etc.
 
 @author: U{Nick Joyce<mailto:nick@boxdesign.co.uk>}
+
 @since: 0.1b
 """
 
